product view carousel

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   awesome_dialog: ^3.2.0
   http_parser: any
   intl: ^0.17.0
+  flutter_carousel_widget: ^2.2.0
 
 dev_dependencies:
   flutter_test:
