added deviceUUid and fcmToken to validate_otp

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ dependencies:
   intl: ^0.17.0
   flutter_carousel_widget: ^2.2.0
   firebase_messaging: ^14.7.10
+  device_uuid: ^0.0.4
 
 dev_dependencies:
   flutter_test:
