--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ dependencies:
   flutter_carousel_widget: ^2.2.0
   firebase_messaging: ^14.7.10
   device_uuid: ^0.0.4
+  multi_select_flutter: ^4.1.3
 
 dev_dependencies:
   flutter_test:
