--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ dependencies:
   firebase_messaging: ^14.7.10
   device_uuid: ^0.0.4
   multi_select_flutter: ^4.1.3
+  image_field: ^0.0.10
 
 dev_dependencies:
   flutter_test:
