--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
   device_uuid: ^0.0.4
   multi_select_flutter: ^4.1.3
   image_field: ^0.0.10
+  flutter_background: ^1.2.0
 
 dev_dependencies:
   flutter_test:
