--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -45,7 +45,26 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
+       <meta-data
+           android:name="com.google.firebase.messaging.default_notification_icon"
+           android:resource="@mipmap/ic_launcher" />
+
+       <meta-data
+           android:name="com.google.firebase.messaging.default_notification_channel_id"
+           android:value="errandia_channel_id" />
+
+       <channel
+           android:name="errandia_channel_id"
+           android:importance="high"
+           android:description="Errandia Channel">
+
+           <notification android:icon="@mipmap/ic_launcher"
+               android:sound="@raw/alert"/>
+       </channel>
+
     </application>
+
 </manifest>
 
 <!-- 
