--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ dependencies:
   multi_select_flutter: ^4.1.3
   image_field: ^0.0.10
   flutter_background: ^1.2.0
+  flutter_local_notifications: ^17.0.0
 
 dev_dependencies:
   flutter_test:
