--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,7 +79,7 @@ dependencies:
   image_field: ^0.0.10
   flutter_background: ^1.2.0
   flutter_local_notifications: ^17.0.0
-  flutter_expandable_fab: ^2.0.0
+  flutter_speed_dial: ^7.0.0
 
 dev_dependencies:
   flutter_test:
