product & service category search update

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,8 @@ dependencies:
   flutter_local_notifications: ^17.0.0
   flutter_speed_dial: ^7.0.0
   ephone_field: ^0.0.2
+  flutter_typeahead: ^5.2.0
+  flutter_keyboard_visibility: ^6.0.0
 
 dev_dependencies:
   flutter_test:
